--- a/package.json
+++ b/package.json
@@ -51,7 +51,5 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {
-    "fast-deep-equal": "^3.1.1"
-  }
+  "dependencies": {}
 }
