--- a/package.json
+++ b/package.json
@@ -48,8 +48,13 @@
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "prettier": "^2.0.5",
+    "prismjs": "^1.20.0",
+    "react-inspector": "^5.0.1",
+    "react-simple-code-editor": "^0.11.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "styled-components": "^5.1.0"
+  }
 }
