Split core fields and labelled ones. Handle errors on fields. Add normalizer. Improve storybook. Style labelled fields.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-corn",
+  "name": "@react-corn/core",
   "version": "0.0.1",
   "description": "Controlled forms with hooks for advanced object editing.",
   "main": "lib/corn.js",
