--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@react-corn/core",
-  "version": "0.0.1",
+  "private": true,
+  "name": "react-corn-monorepo",
+  "version": "1.0.0-monorepo",
   "description": "Controlled forms with hooks for advanced object editing.",
   "main": "lib/corn.js",
   "module": "src/index.js",
@@ -8,10 +9,10 @@
   "author": "Florian Mounier",
   "license": "MIT",
   "scripts": {
-    "build": "rm -fr lib && webpack --mode production",
-    "lint": "eslint src stories test",
+    "build": "lerna run build",
+    "lint": "eslint .",
     "fix": "prettier --write **/*.js",
-    "test": "jest --coverage",
+    "test": "jest --coverage --passWithNoTests",
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "test-debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "prepublish": "npm run build",
@@ -21,10 +22,6 @@
     "build-storybook": "build-storybook"
   },
   "pre-commit": "lint,test",
-  "files": [
-    "lib/",
-    "src/"
-  ],
   "peerDependencies": {
     "react": "^16.x.x",
     "react-dom": "^16.x.x"
@@ -33,6 +30,8 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@storybook/addon-storysource": "^6.0.0-beta.5",
     "@storybook/addons": "^6.0.0-beta.5",
     "@storybook/react": "^6.0.0-beta.5",
@@ -47,13 +46,20 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "jest": "^26.0.1",
+    "lerna": "^3.20.2",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
     "prismjs": "^1.20.0",
     "react-simple-code-editor": "^0.11.0",
+    "rollup": "^2.10.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "styled-components": "^5.1.0"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
