--- a/package.json
+++ b/package.json
@@ -22,14 +22,11 @@
     "build-storybook": "build-storybook"
   },
   "pre-commit": "lint,test",
-  "peerDependencies": {
-    "react": "^16.x.x",
-    "react-dom": "^16.x.x"
-  },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@material-ui/core": "^4.9.14",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@storybook/addon-storysource": "^6.0.0-beta.5",
@@ -51,13 +48,13 @@
     "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
     "prismjs": "^1.20.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-simple-code-editor": "^0.11.0",
     "rollup": "^2.10.0",
+    "styled-components": "^5.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
-  },
-  "dependencies": {
-    "styled-components": "^5.1.0"
   },
   "workspaces": [
     "packages/*"
