--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -11,8 +11,11 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
+    "@material-ui/core": "^4.x.x",
     "react": "^16.x.x",
-    "react-dom": "^16.x.x",
-    "@material-ui/core": "^4.x.x"
+    "react-dom": "^16.x.x"
+  },
+  "dependencies": {
+    "clsx": "^1.1.0"
   }
 }
