Add lerna publish

--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "license": "MIT",
   "scripts": {
     "build": "lerna run build",
+    "publish": "lerna publish",
     "lint": "eslint .",
     "fix": "prettier --write **/*.js",
     "test": "jest --coverage --passWithNoTests",
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "test-debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "prepublish": "npm run build",
+    "prepublish": "yarn run build",
     "storybook": "start-storybook -p 6006",
     "storybook-debug": "node --inspect-brk ./node_modules/.bin/start-storybook -p 9001",
     "storybook-deploy": "storybook-to-ghpages",
