Rename reset function to onReset. Add method="post" on form by default. onSubmit now allow returning a boolean or an object containing external errors, can also return a promise returning the latter.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "react-corn-monorepo",
-  "version": "1.0.0-monorepo",
+  "version": "1.x.x-monorepo",
   "description": "Controlled forms with hooks for advanced object editing.",
   "main": "lib/corn.js",
   "module": "src/index.js",
@@ -24,36 +24,36 @@
   },
   "pre-commit": "lint,test",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@material-ui/core": "^4.9.14",
-    "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@storybook/addon-storysource": "^6.0.0-beta.5",
-    "@storybook/addons": "^6.0.0-beta.5",
-    "@storybook/react": "^6.0.0-beta.5",
-    "@storybook/storybook-deployer": "^2.8.5",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@material-ui/core": "^4.10.1",
+    "@rollup/plugin-babel": "^5.0.3",
+    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@storybook/addon-storysource": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/react": "^5.3.19",
+    "@storybook/storybook-deployer": "^2.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "jest": "^26.0.1",
-    "lerna": "^3.20.2",
+    "lerna": "^3.22.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-simple-code-editor": "^0.11.0",
-    "rollup": "^2.10.0",
-    "styled-components": "^5.1.0",
+    "rollup": "^2.15.0",
+    "styled-components": "^5.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
