--- a/packages/material-ui-quill/package.json
+++ b/packages/material-ui-quill/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^16.x.x"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
-    "react-quill": "^2.0.0-beta.2"
+    "@react-corn/quill": "^1.2.1",
+    "clsx": "^1.1.1"
   }
 }
