--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "build": "lerna run build",
-    "publish-all": "lerna publish",
+    "publish-all": "yarn build && lerna publish",
     "lint": "eslint .",
     "fix": "prettier --write **/*.js",
     "test": "jest --coverage --passWithNoTests",
