--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "lerna run build",
     "publish-all": "yarn build && lerna publish",
+    "force-publish-all": "lerna publish --force-publish=* --yes",
     "lint": "eslint .",
     "fix": "prettier --write **/*.js",
     "test": "jest --coverage --passWithNoTests",
