--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "@babel/preset-react": "^7.10.1",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/styles": "^4.10.0",
     "@rollup/plugin-babel": "^5.0.3",
     "@rollup/plugin-node-resolve": "^8.0.1",
     "@storybook/addon-storysource": "^5.3.19",
@@ -41,6 +45,7 @@
     "@storybook/storybook-deployer": "^2.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "clsx": "^1.1.1",
     "date-fns": "^2.14.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -57,6 +62,7 @@
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-quill": "^1.3.5",
     "react-simple-code-editor": "^0.11.0",
     "rollup": "^2.15.0",
     "styled-components": "^5.1.1",
