--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -12,6 +12,7 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.x.x",
+    "@material-ui/icons": "^4.x.x",
     "react": "^16.x.x",
     "react-dom": "^16.x.x"
   },
