--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0-beta.2",
     "react-simple-code-editor": "^0.11.0",
     "rollup": "^2.15.0",
     "styled-components": "^5.1.1",
