--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/react": "^6.0.16",
     "@storybook/storybook-deployer": "^2.8.6",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.15.0",
@@ -75,19 +76,13 @@
     "packages/*"
   ],
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json"
-    ],
-    "modulePaths": [
-      "<rootDir>/packages/*/src"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
     "moduleNameMapper": {
       "\\.(css|sass)$": "<rootDir>/stories/mock/style.js",
       "^!!raw-loader!": "<rootDir>/stories/mock/raw.js"
-    }
+    },
+    "resolver": "<rootDir>/stories/mock/module-resolver.js",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-corn)/)"
+    ]
   }
 }
