--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "@storybook/addon-storyshots": "^6.0.19",
     "@storybook/addon-storysource": "^6.0.16",
     "@storybook/addons": "^6.0.16",
@@ -55,21 +55,22 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "eslint-plugin-simple-import-sort": "^6.0.1",
     "jest": "^26.4.2",
     "lerna": "^3.22.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.0",
     "prismjs": "^1.21.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "raw-loader": "^4.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-quill": "^2.0.0-beta.2",
     "react-simple-code-editor": "^0.11.0",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^17.0.1",
     "rollup": "^2.26.5",
     "styled-components": "^5.1.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0"
   },
   "workspaces": [
     "packages/*"
