--- a/package.json
+++ b/package.json
@@ -27,33 +27,33 @@
     "lint"
   ],
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.10.0",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-alpha.32",
+    "@material-ui/icons": "^5.0.0-alpha.29",
+    "@material-ui/lab": "^5.0.0-alpha.32",
+    "@material-ui/styles": "^5.0.0-alpha.32",
     "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@storybook/addon-storyshots": "^6.0.19",
-    "@storybook/addon-storysource": "^6.0.16",
-    "@storybook/addons": "^6.0.16",
-    "@storybook/react": "^6.0.16",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@storybook/addon-storyshots": "^6.2.9",
+    "@storybook/addon-storysource": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@storybook/storybook-deployer": "^2.8.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "clsx": "^1.1.1",
-    "date-fns": "^2.15.0",
-    "eslint": "^7.7.0",
-    "eslint-config-prettier": "^8.1.0",
+    "date-fns": "^2.21.2",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^26.4.2",
@@ -62,15 +62,15 @@
     "prettier": "^2.1.0",
     "prismjs": "^1.21.0",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-quill": "^2.0.0-beta.2",
     "react-simple-code-editor": "^0.11.0",
-    "react-test-renderer": "^17.0.1",
-    "rollup": "^2.26.5",
-    "styled-components": "^5.1.1",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0"
+    "react-test-renderer": "^17.0.2",
+    "rollup": "^2.47.0",
+    "styled-components": "^5.3.0",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0"
   },
   "workspaces": [
     "packages/*"
