--- a/packages/material-ui-lab/package.json
+++ b/packages/material-ui-lab/package.json
@@ -11,13 +11,13 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.x.x",
+    "@material-ui/core": "^5.x.x",
+    "@material-ui/lab": "^5.x.x",
     "@react-corn/material-ui": "^1.x.x",
     "react": "^17.x.x",
     "react-dom": "^17.x.x"
   },
   "dependencies": {
-    "@material-ui/lab": "^4.0.0-alpha.56",
     "clsx": "^1.1.1"
   }
 }
