--- a/packages/material-ui-pickers/package.json
+++ b/packages/material-ui-pickers/package.json
@@ -11,13 +11,13 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.x.x",
-    "@material-ui/material-ui": "^4.x.x",
+    "@material-ui/core": "^5.x.x",
+    "@material-ui/material-ui": "^5.x.x",
+    "@material-ui/lab": "^5.x.x",
     "react": "^17.x.x",
     "react-dom": "^17.x.x"
   },
   "dependencies": {
-    "@material-ui/pickers": "^3.2.10",
     "clsx": "^1.1.1"
   }
 }
