--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "publish-all": "yarn build && lerna publish",
     "force-publish-all": "lerna publish --force-publish=* --yes",
     "lint": "eslint .",
-    "fix": "prettier --write **/*.js",
+    "fix": "prettier --write '**/*.js'",
     "test": "jest --coverage",
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "test-debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
@@ -27,50 +27,44 @@
     "lint"
   ],
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.10.0",
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.5.40",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@storybook/addon-storyshots": "^6.0.19",
-    "@storybook/addon-storysource": "^6.0.16",
-    "@storybook/addons": "^6.0.16",
-    "@storybook/react": "^6.0.16",
-    "@storybook/storybook-deployer": "^2.8.6",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@storybook/addon-storyshots": "^6.3.12",
+    "@storybook/addon-storysource": "^6.3.12",
+    "@storybook/addons": "^6.3.12",
+    "@storybook/react": "^6.3.12",
+    "@storybook/storybook-deployer": "^2.8.10",
+    "babel-jest": "^27.3.0",
     "babel-loader": "^8.1.0",
     "clsx": "^1.1.1",
-    "date-fns": "^2.15.0",
-    "eslint": "^7.7.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.0",
+    "date-fns": "^2.25.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.1-alpha-930c9e7ee-20211015",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "^26.4.2",
+    "jest": "^27.3.0",
     "lerna": "^4.0.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.1.0",
-    "prismjs": "^1.21.0",
+    "prettier": "^2.4.1",
+    "prismjs": "^1.25.0",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-quill": "^2.0.0-beta.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-quill": "2.0.0-beta.4",
     "react-simple-code-editor": "^0.11.0",
-    "react-test-renderer": "^17.0.1",
-    "rollup": "^2.26.5",
-    "styled-components": "^5.1.1",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0"
+    "react-test-renderer": "^17.0.2",
+    "rollup": "^2.58.0",
+    "styled-components": "^5.3.1",
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.1"
   },
   "workspaces": [
     "packages/*"
@@ -84,5 +78,13 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(@react-corn)/)"
     ]
+  },
+  "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.51",
+    "@mui/material": "^5.0.4",
+    "@mui/styles": "^5.0.1"
   }
 }
