--- a/packages/mui-quill/package.json
+++ b/packages/mui-quill/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@react-corn/material-ui-quill",
+  "name": "@react-corn/mui-quill",
   "version": "1.4.2",
-  "description": "Controlled forms with hooks for advanced object editing. HTML rich text edition with quill package integrated with material-ui.",
+  "description": "Controlled forms with hooks for advanced object editing. HTML rich text edition with quill package integrated with mui.",
   "main": "dist/bundle.js",
   "module": "src/index.js",
   "repository": "https://github.com/paradoxxxzero/react-corn",
@@ -11,12 +11,12 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.x.x",
-    "@react-corn/material-ui": "^1.x.x",
+    "@mui/material": "^5.x.x",
     "react": "^17.x.x",
     "react-dom": "^17.x.x"
   },
   "dependencies": {
+    "@react-corn/mui": "^1.4.2",
     "@react-corn/quill": "^1.4.2",
     "clsx": "^1.1.1"
   }
