--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@react-corn/material-ui-pickers",
+  "name": "@react-corn/mui",
   "version": "1.4.2",
-  "description": "Controlled forms with hooks for advanced object editing. Material-ui pickers fields package.",
+  "description": "Controlled forms with hooks for advanced object editing. Mui fields package.",
   "main": "dist/bundle.js",
   "module": "src/index.js",
   "repository": "https://github.com/paradoxxxzero/react-corn",
@@ -11,13 +11,12 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.x.x",
-    "@material-ui/material-ui": "^4.x.x",
+    "@mui/material": "^5.x.x",
+    "@mui/icons-material": "^5.x.x",
     "react": "^17.x.x",
     "react-dom": "^17.x.x"
   },
   "dependencies": {
-    "@material-ui/pickers": "^3.2.10",
     "clsx": "^1.1.1"
   }
 }
