--- a/packages/quill/package.json
+++ b/packages/quill/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "react-quill": "^2.0.0-beta.2",
-    "styled-components": "^5.1.1"
+    "react-quill": "2.0.0-beta.4",
+    "styled-components": "^5.3.1"
   }
 }
