Use esm modules

--- a/packages/mui-quill/package.json
+++ b/packages/mui-quill/package.json
@@ -2,8 +2,9 @@
   "name": "@react-corn/mui-quill",
   "version": "1.5.1",
   "description": "Controlled forms with hooks for advanced object editing. HTML rich text edition with quill package integrated with mui.",
-  "main": "dist/bundle.js",
-  "module": "src/index.js",
+  "type": "module",
+  "module": "./dist/bundle.js",
+  "exports": "./dist/bundle.js",
   "repository": "https://github.com/paradoxxxzero/react-corn",
   "author": "Florian Mounier",
   "license": "MIT",
