--- a/packages/simple/package.json
+++ b/packages/simple/package.json
@@ -2,8 +2,9 @@
   "name": "@react-corn/simple",
   "version": "1.5.0",
   "description": "Controlled forms with hooks for advanced object editing. Simple ui field package.",
-  "main": "dist/bundle.js",
-  "module": "src/index.js",
+  "type": "module",
+  "module": "./dist/bundle.js",
+  "exports": "./dist/bundle.js",
   "repository": "https://github.com/paradoxxxzero/react-corn",
   "author": "Florian Mounier",
   "license": "MIT",
