--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/eslint-parser": "^7.5.40",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@emotion/jest": "^11.5.0",
     "@rollup/plugin-babel": "^5.2.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@storybook/addon-storyshots": "^6.3.12",
@@ -49,11 +50,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.1-alpha-930c9e7ee-20211015",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.3.0",
     "lerna": "^4.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.4.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "prismjs": "^1.25.0",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
@@ -63,6 +64,7 @@
     "react-test-renderer": "^17.0.2",
     "rollup": "^2.58.0",
     "styled-components": "^5.3.1",
+    "typescript": "^4.4.4",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.1"
   },
@@ -84,7 +86,6 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.51",
-    "@mui/material": "^5.0.4",
-    "@mui/styles": "^5.0.1"
+    "@mui/material": "^5.0.4"
   }
 }
