--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "@emotion/jest": "^11.5.0",
     "@rollup/plugin-babel": "^5.2.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
-    "@storybook/addon-storyshots": "^6.3.12",
-    "@storybook/addon-storysource": "^6.3.12",
-    "@storybook/addons": "^6.3.12",
-    "@storybook/react": "^6.3.12",
+    "@storybook/addon-storyshots": "^6.5.0-alpha.64",
+    "@storybook/addon-storysource": "^6.4.22",
+    "@storybook/addons": "^6.5.0-alpha.64",
+    "@storybook/react": "^6.5.0-alpha.64",
     "@storybook/storybook-deployer": "^2.8.10",
     "babel-jest": "^27.3.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-prismjs": "^2.1.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.25.0",
     "eslint": "^8.0.1",
@@ -57,11 +58,11 @@
     "prettier-plugin-organize-imports": "^2.3.4",
     "prismjs": "^1.25.0",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-quill": "2.0.0-beta.4",
     "react-simple-code-editor": "^0.11.0",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.0.0",
     "rollup": "^2.58.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.4",
@@ -82,10 +83,10 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.4",
-    "@mui/lab": "^5.0.0-alpha.51",
-    "@mui/material": "^5.0.4"
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
+    "@mui/x-date-pickers": "^5.0.0-alpha.1"
   }
 }
