--- a/packages/mui-x/package.json
+++ b/packages/mui-x/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@react-corn/mui-lab",
+  "name": "@react-corn/mui-x",
   "version": "1.6.3",
-  "description": "Controlled forms with hooks for advanced object editing. Mui lab fields package.",
+  "description": "Controlled forms with hooks for advanced object editing. Mui x fields package.",
   "main": "dist/bundle.js",
   "module": "src/index.js",
   "repository": "https://github.com/paradoxxxzero/react-corn",
@@ -11,10 +11,10 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
-    "@mui/lab": "^5.x.x",
+    "@mui/x-date-pickers": "^5.x.x",
     "@mui/material": "^5.x.x",
-    "react": "^17.x.x",
-    "react-dom": "^17.x.x"
+    "react": "^18.x.x",
+    "react-dom": "^18.x.x"
   },
   "dependencies": {
     "@react-corn/mui": "^1.6.3",
