--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "name": "react-corn-monorepo",
   "version": "1.0.0-monorepo",
   "description": "Controlled forms with hooks for advanced object editing.",
-  "main": "lib/corn.js",
-  "module": "src/index.js",
   "repository": "https://github.com/paradoxxxzero/react-corn",
   "author": "Florian Mounier",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "lerna run build",
     "publish-all": "yarn build && lerna publish",
@@ -27,47 +26,46 @@
     "lint"
   ],
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/eslint-parser": "^7.5.40",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@emotion/jest": "^11.5.0",
-    "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@storybook/addon-storyshots": "^6.5.0-alpha.64",
-    "@storybook/addon-storysource": "^6.4.22",
-    "@storybook/addons": "^6.5.0-alpha.64",
-    "@storybook/react": "^6.5.0-alpha.64",
-    "@storybook/storybook-deployer": "^2.8.10",
-    "babel-jest": "^27.3.0",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@emotion/jest": "^11.10.5",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@storybook/addon-storyshots": "^6.5.16",
+    "@storybook/addon-storysource": "^6.5.16",
+    "@storybook/addons": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/storybook-deployer": "^2.8.16",
+    "babel-jest": "^29.4.2",
     "babel-plugin-prismjs": "^2.1.0",
-    "clsx": "^1.1.1",
-    "date-fns": "^2.25.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.1-alpha-930c9e7ee-20211015",
-    "jest": "^27.3.0",
-    "lerna": "^4.0.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.4.2",
+    "lerna": "^6.4.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.4.1",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "prismjs": "^1.25.0",
+    "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prismjs": "^1.29.0",
     "raw-loader": "^4.0.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-quill": "2.0.0-beta.4",
-    "react-simple-code-editor": "^0.11.0",
-    "react-test-renderer": "^18.0.0",
-    "rollup": "^2.58.0",
-    "styled-components": "^5.3.1",
-    "typescript": "^4.4.4",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-quill": "2.0.0",
+    "react-simple-code-editor": "^0.13.1",
+    "react-test-renderer": "^18.2.0",
+    "rollup": "^3.15.0",
+    "styled-components": "^5.3.6",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "workspaces": [
     "packages/*"
@@ -83,10 +81,10 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.2",
-    "@mui/x-date-pickers": "^5.0.0-alpha.1"
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
+    "@mui/x-date-pickers": "^5.0.18"
   }
 }
