--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "1.7.0",
+  "packages": ["packages/*"],
+  "version": "1.8.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
